--- a/QuanLyVatTu/QuanLyVatTu.csproj
+++ b/QuanLyVatTu/QuanLyVatTu.csproj
@@ -84,6 +84,18 @@
     <Compile Include="FormTaoLogin.Designer.cs">
       <DependentUpon>FormTaoLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportForm\BaoCaoDonHangThieuPN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm\BaoCaoDonHangThieuPN.Designer.cs">
+      <DependentUpon>BaoCaoDonHangThieuPN.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportForm\FormTongHopNhapXuat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm\FormTongHopNhapXuat.Designer.cs">
+      <DependentUpon>FormTongHopNhapXuat.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportForm\ReportChiTietSL_TriGiaNhapXuat.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -166,19 +178,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportForm\ReportDDHThieuPN.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ReportForm\ReportDDHThieuPN.Designer.cs">
+      <DependentUpon>ReportDDHThieuPN.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportForm\ReportInDanhSanhNhanVien.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportForm\ReportInDanhSanhNhanVien.Designer.cs">
       <DependentUpon>ReportInDanhSanhNhanVien.cs</DependentUpon>
     </Compile>
-
     <Compile Include="ReportForm\ReportHoatDongCua1NhanVien.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportForm\ReportHoatDongCua1NhanVien.Designer.cs">
       <DependentUpon>ReportHoatDongCua1NhanVien.cs</DependentUpon>
-
     </Compile>
     <EmbeddedResource Include="FormDatHang.resx">
       <DependentUpon>FormDatHang.cs</DependentUpon>
@@ -207,6 +223,12 @@
     <EmbeddedResource Include="FormVatTu.resx">
       <DependentUpon>FormVatTu.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\BaoCaoDonHangThieuPN.resx">
+      <DependentUpon>BaoCaoDonHangThieuPN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\FormTongHopNhapXuat.resx">
+      <DependentUpon>FormTongHopNhapXuat.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\ReportChiTietSL_TriGiaNhapXuat.resx">
       <DependentUpon>ReportChiTietSL_TriGiaNhapXuat.cs</DependentUpon>
     </EmbeddedResource>
@@ -230,10 +252,12 @@
     <EmbeddedResource Include="ReportForm\InDanhSanhNhanVien.resx">
       <DependentUpon>InDanhSanhNhanVien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\ReportDDHThieuPN.resx">
+      <DependentUpon>ReportDDHThieuPN.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\ReportInDanhSanhNhanVien.resx">
       <DependentUpon>ReportInDanhSanhNhanVien.cs</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="ReportForm\ReportHoatDongCua1NhanVien.resx">
       <DependentUpon>ReportHoatDongCua1NhanVien.cs</DependentUpon>
     </EmbeddedResource>
