--- a/QuanLyVatTu/QuanLyVatTu.csproj
+++ b/QuanLyVatTu/QuanLyVatTu.csproj
@@ -90,6 +90,12 @@
     <Compile Include="ReportForm\BaoCaoDonHangThieuPN.Designer.cs">
       <DependentUpon>BaoCaoDonHangThieuPN.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportForm\BaoCaoVatuTu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportForm\BaoCaoVatuTu.Designer.cs">
+      <DependentUpon>BaoCaoVatuTu.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReportForm\FormTongHopNhapXuat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +202,12 @@
     <Compile Include="ReportForm\ReportHoatDongCua1NhanVien.Designer.cs">
       <DependentUpon>ReportHoatDongCua1NhanVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="ReportForm\ReportVatTu.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ReportForm\ReportVatTu.Designer.cs">
+      <DependentUpon>ReportVatTu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormDatHang.resx">
       <DependentUpon>FormDatHang.cs</DependentUpon>
     </EmbeddedResource>
@@ -225,6 +237,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\BaoCaoDonHangThieuPN.resx">
       <DependentUpon>BaoCaoDonHangThieuPN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\BaoCaoVatuTu.resx">
+      <DependentUpon>BaoCaoVatuTu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\FormTongHopNhapXuat.resx">
       <DependentUpon>FormTongHopNhapXuat.cs</DependentUpon>
@@ -260,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ReportForm\ReportHoatDongCua1NhanVien.resx">
       <DependentUpon>ReportHoatDongCua1NhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportForm\ReportVatTu.resx">
+      <DependentUpon>ReportVatTu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="DS.xsc">
       <DependentUpon>DS.xsd</DependentUpon>
